fix CSS layout, add js  psudocode

--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
     <link rel="stylesheet" href="repo-assets/css/style.css" />
   </head>
   <body>
-    <div class="container">
+
       <div class="jumbotron jumbotron-fluid">
-        <div class="container">
+    
           <h1 class="display-4">Train Time!</h1>
           <p class="lead">
-            This app uses Bootstrap, jQuery, and Firebase to create a demo NYC
-            Subway station schedule.
+            This app uses Bootstrap, jQuery, Moment.js, and Firebase to create a
+            demo NYC Subway station schedule.
           </p>
         </div>
       </div>
 
       <div class="card">
-        <div class="card-header">
+        <h5 class="card-header">
           Current Train Schedule
-        </div>
+        </h5>
         <div class="card-body">
           <table class="table">
             <thead>
@@ -42,21 +42,21 @@
             </thead>
             <tbody>
               <tr>
-                <th scope="row">1</th>
+                <th scope="row"><div class="mainNumber">1</div></th>
                 <td>7th Avenue Local</td>
                 <td>6:00</td>
                 <td>5:00</td>
                 <td>4:00</td>
               </tr>
               <tr>
-                <th scope="row">2</th>
+                <th scope="row"><div class="mainNumber">2</div></th>
                 <td>Flatbush Avenue-Brooklyn College</td>
                 <td>12:00</td>
                 <td>7:00</td>
                 <td>5:00</td>
               </tr>
               <tr>
-                <th scope="row">L</th>
+                <th scope="row"><div class="mainNumber">3</div></th>
                 <td>Canasirse</td>
                 <td>20:00</td>
                 <td>7:00</td>
@@ -65,57 +65,57 @@
             </tbody>
           </table>
         </div>
+      </div>
 
-        <div class="card">
-          <h5 class="card-header">Add A Train</h5>
-          <div class="card-body">
-            <form>
+      <div class="card">
+        <h5 class="card-header">Add A Train</h5>
+        <div class="card-body">
+          <form>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Train Name</label>
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                placeholder="Enter Train Name"
+              />
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Destination</label>
+              <input
+                type="password"
+                class="form-control"
+                id="exampleInputPassword1"
+                placeholder="Destination"
+              />
+
               <div class="form-group">
-                <label for="exampleInputEmail1">Train Name</label>
+                <label for="exampleInputEmail1"
+                  >First Train Time (Military Time HH:MM)</label
+                >
                 <input
                   type="email"
                   class="form-control"
                   id="exampleInputEmail1"
                   aria-describedby="emailHelp"
-                  placeholder="Enter Train Name"
+                  placeholder="Frequency"
                 />
               </div>
               <div class="form-group">
-                <label for="exampleInputPassword1">Destination</label>
+                <label for="exampleInputEmail1">Frequency</label>
                 <input
-                  type="password"
+                  type="email"
                   class="form-control"
-                  id="exampleInputPassword1"
-                  placeholder="Destination"
+                  id="exampleInputEmail1"
+                  aria-describedby="emailHelp"
+                  placeholder="Frequency"
                 />
-
-                <div class="form-group">
-                  <label for="exampleInputEmail1"
-                    >First Train Time (Military Time HH:MM)</label
-                  >
-                  <input
-                    type="email"
-                    class="form-control"
-                    id="exampleInputEmail1"
-                    aria-describedby="emailHelp"
-                    placeholder="Frequency"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="exampleInputEmail1">Frequency</label>
-                  <input
-                    type="email"
-                    class="form-control"
-                    id="exampleInputEmail1"
-                    aria-describedby="emailHelp"
-                    placeholder="Frequency"
-                  />
-                </div>
               </div>
+            </div>
 
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-          </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
         </div>
       </div>
     </div>
