--- a/index.html
+++ b/index.html
@@ -5,32 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Firebase 'Train'-ing: Train Schedule</title>
+
+    <!-- Bootstrap -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- Firebase References -->
+
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+
+    <!-- Moment.js Reference -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+    <!-- Style -->
     <link rel="stylesheet" href="repo-assets/css/style.css" />
   </head>
   <body>
-
+    <div class="container">
+      <!-- Jumbotron -->
       <div class="jumbotron jumbotron-fluid">
-    
-          <h1 class="display-4">Train Time!</h1>
-          <p class="lead">
-            This app uses Bootstrap, jQuery, Moment.js, and Firebase to create a
-            demo NYC Subway station schedule.
-          </p>
-        </div>
+        <h1 class="display-4">Train Time!</h1>
+        <p class="lead">
+          This app uses Bootstrap, jQuery, Moment.js, and Firebase to create a
+          demo Subway station schedule.
+        </p>
       </div>
+
+      <!-- Current Train Schedule-->
 
       <div class="card">
         <h5 class="card-header">
           Current Train Schedule
         </h5>
         <div class="card-body">
-          <table class="table">
+          <table class="table" id="train-table">
             <thead>
               <tr>
                 <th scope="col">Train Name</th>
@@ -42,21 +62,21 @@
             </thead>
             <tbody>
               <tr>
-                <th scope="row"><div class="mainNumber">1</div></th>
+                <th scope="row">1</th>
                 <td>7th Avenue Local</td>
                 <td>6:00</td>
                 <td>5:00</td>
                 <td>4:00</td>
               </tr>
               <tr>
-                <th scope="row"><div class="mainNumber">2</div></th>
+                <th scope="row">2</th>
                 <td>Flatbush Avenue-Brooklyn College</td>
                 <td>12:00</td>
                 <td>7:00</td>
                 <td>5:00</td>
               </tr>
               <tr>
-                <th scope="row"><div class="mainNumber">3</div></th>
+                <th scope="row">3</th>
                 <td>Canasirse</td>
                 <td>20:00</td>
                 <td>7:00</td>
@@ -67,16 +87,18 @@
         </div>
       </div>
 
+      <!-- Add Train  -->
       <div class="card">
         <h5 class="card-header">Add A Train</h5>
         <div class="card-body">
+          <!-- Entry Form -->
           <form>
             <div class="form-group">
               <label for="exampleInputEmail1">Train Name</label>
               <input
-                type="email"
+                type="text"
                 class="form-control"
-                id="exampleInputEmail1"
+                id="lineName"
                 aria-describedby="emailHelp"
                 placeholder="Enter Train Name"
               />
@@ -84,9 +106,9 @@
             <div class="form-group">
               <label for="exampleInputPassword1">Destination</label>
               <input
-                type="password"
+                type="text"
                 class="form-control"
-                id="exampleInputPassword1"
+                id="destination"
                 placeholder="Destination"
               />
 
@@ -95,9 +117,9 @@
                   >First Train Time (Military Time HH:MM)</label
                 >
                 <input
-                  type="email"
+                  type="time"
                   class="form-control"
-                  id="exampleInputEmail1"
+                  id="trainTimes"
                   aria-describedby="emailHelp"
                   placeholder="Frequency"
                 />
@@ -105,19 +127,26 @@
               <div class="form-group">
                 <label for="exampleInputEmail1">Frequency</label>
                 <input
-                  type="email"
+                  type="number"
                   class="form-control"
-                  id="exampleInputEmail1"
+                  id="frequency"
                   aria-describedby="emailHelp"
                   placeholder="Frequency"
                 />
               </div>
             </div>
 
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" id="add-train-btn">
+              Add Train
+            </button>
           </form>
         </div>
       </div>
     </div>
+    <!-- JavaScript -->
+
+    <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
+
+    <script src="repo-assets/javascript/app.js"></script>
   </body>
 </html>
