add css updates

--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
     <div class="container">
       <!-- Jumbotron -->
       <div class="jumbotron jumbotron-fluid">
-        <h1 class="display-4">Train Time!</h1>
-        <p class="lead">
-          This app uses Bootstrap, jQuery, and Moment.js, and Firebase to create
-          a demo Subway station schedule.
-        </p>
+        <div class="container">
+          <h1 class="display-4">Train Time!</h1>
+          <p class="lead">
+            This app uses Bootstrap, jQuery, and Moment.js, and Firebase to
+            create a demo Subway station schedule. All trains start at 12:00AM.
+          </p>
+        </div>
       </div>
 
       <!-- Current Train Schedule-->
